--- a/DiagramBidding/DiagramBidding.csproj
+++ b/DiagramBidding/DiagramBidding.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DBContext.cs" />
+    <Compile Include="Models\DbInitializer.cs" />
     <Compile Include="Models\HandbkTrade.cs" />
     <Compile Include="Models\Member.cs" />
     <Compile Include="Models\Tool.cs" />
