--- a/DiagramBidding/DiagramBidding.csproj
+++ b/DiagramBidding/DiagramBidding.csproj
@@ -174,6 +174,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Razor.cshtml" />
+    <Content Include="Views\Home\Ajax.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
